<resources>
    <string name="app_name">iPlant</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_settings">Settings</string>
    <string name="title_progress">Progress</string>
    <string name="title_custom">Custom</string>
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text"><strong>Developed By MaRS Group cc.2018</strong>
</string>
    <string name="title_activity_plantpage">plantpage</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_track_planted">Tracking</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
